--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Click squares and uncover the minefield, RIGHT click to mark mines for potential flags. You win if all non-mine squares are clicked.
+		    Click squares and uncover the minefield, RIGHT click to mark mines for potential flags. You win if all non-mine squares are clicked. Press any key after winning or losing to reset.
 	    </footer>
 	</body>
 </html>
